.metadata/.plugins/org.eclipse.cdt.ui/Blink_Reset_Test.build.log
17:25:39 **** Incremental Build of configuration Debug for project Blink_Reset_Test ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F072xB -DDEBUG -c -I../Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/CMSIS/Include -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:105:19: error: 'GPIOx' undeclared (first use in this function); did you mean 'GPIOC'?
     HAL_GPIO_Init(GPIOx, GPIO_Init);
                   ^~~~~
                   GPIOC
../Src/main.c:105:19: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:105:26: error: 'GPIO_Init' undeclared (first use in this function); did you mean 'MX_GPIO_Init'?
     HAL_GPIO_Init(GPIOx, GPIO_Init);
                          ^~~~~~~~~
                          MX_GPIO_Init
make: *** [Src/subdir.mk:33: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

17:25:40 Build Failed. 3 errors, 0 warnings. (took 769ms)

